--- a/ImageServiceGUI/MainWindow.xaml
+++ b/ImageServiceGUI/MainWindow.xaml
@@ -3,18 +3,18 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ImageServiceGUI"
+        xmlns:controls="clr-namespace:ImageServiceGUI.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800" Background="AntiqueWhite">
+        Title="Image App" Height="600" Width="800" Background="AntiqueWhite">
     <StackPanel>
 		<Image Source="srcImg/title.png" />
 		<TabControl>
 			<TabItem Header="Settings">
-				<Label Content="User Control1 source page" />
-			</TabItem>
+                <controls:SettingsView/>
+            </TabItem>
 			<TabItem Header="Logs">
-				<Label Content="User Control2 source page" />
-			</TabItem>
+                <controls:LogView/>
+            </TabItem>
 		</TabControl>
 	</StackPanel>
 </Window>
