--- a/ImageServiceGUI/Views/SettingsView.xaml
+++ b/ImageServiceGUI/Views/SettingsView.xaml
@@ -3,7 +3,6 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ImageServiceGUI.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <StackPanel Grid.Row="6" Grid.ColumnSpan="2" Orientation="Vertical">
@@ -22,16 +21,16 @@
             </Grid.ColumnDefinitions>
             <TextBlock Grid.Row="1"  Grid.ColumnSpan="2" Padding="3" Text="Settings" TextAlignment="Center" FontWeight="Bold" Foreground="Blue" FontSize="20"></TextBlock>
             <TextBlock Grid.Row="2" Grid.Column="0" Padding="3" Margin="3" FontWeight="Bold" FontSize="14" >Output Directory:</TextBlock>
-            <TextBlock Grid.Row="2" Grid.Column="1" Padding="3" Margin="3" Text="{Binding OutputDir}"></TextBlock>
+            <TextBlock Grid.Row="2" Grid.Column="1" Padding="3" Margin="3" Text="{Binding VM_OutputDir}"></TextBlock>
             <TextBlock Grid.Row="3" Grid.Column="0" Padding="3" Margin="3" FontWeight="Bold" FontSize="14">Source Name:</TextBlock>
-            <TextBlock Grid.Row="3" Grid.Column="1" Padding="3" Margin="3" Text="{Binding SourceName}"></TextBlock>
+            <TextBlock Grid.Row="3" Grid.Column="1" Padding="3" Margin="3" Text="{Binding VM_SourceName}"></TextBlock>
             <TextBlock Grid.Row="4" Grid.Column="0" Padding="3" Margin="3" FontWeight="Bold" FontSize="14">Log Name:</TextBlock>
-            <TextBlock Grid.Row="4" Grid.Column="1" Padding="3" Margin="3" Text="{Binding LogName}"></TextBlock>
+            <TextBlock Grid.Row="4" Grid.Column="1" Padding="3" Margin="3" Text="{Binding VM_LogName}"></TextBlock>
             <TextBlock Grid.Row="5" Grid.Column="0" Padding="3" Margin="3" FontWeight="Bold" FontSize="14">Thumbnail Size:</TextBlock>
-            <TextBlock Grid.Row="5" Grid.Column="1" Padding="3" Margin="3" Text="{Binding ThumbnailSize}"></TextBlock>
+            <TextBlock Grid.Row="5" Grid.Column="1" Padding="3" Margin="3" Text="{Binding VM_ThumbnailSize}"></TextBlock>
         </Grid>
-        <Button Command="{Binding RemoveCommand}">Remove</Button>
-        <ListBox Margin="10" ItemsSource="{Binding Handlers}" SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
+        <Button Command="{Binding RemoveCommand, Mode=TwoWay}">Remove</Button>
+        <ListBox Margin="10" ItemsSource="{Binding VM_DirectoryHandlers}" SelectedItem="{Binding VM_SelectedPath, Mode=TwoWay}">
         </ListBox>
     </StackPanel>
 </UserControl>
