--- a/ImageServiceGUI/Views/LogView.xaml
+++ b/ImageServiceGUI/Views/LogView.xaml
@@ -9,26 +9,23 @@
     <UserControl.Resources>
         <local:ColorConverter x:Key="ColorConverter"/>
     </UserControl.Resources>
-    <Grid>
-        <StackPanel>
-            <TextBlock Padding="3" Text="Logs" TextAlignment="Center" FontWeight="Bold" Foreground="Blue" FontSize="20"></TextBlock>
-            <Border BorderBrush="AntiqueWhite" HorizontalAlignment="Stretch">
-                <DataGrid Name="DataGrid" ItemsSource="{Binding VM_ServiceLogs}" IsReadOnly="True" CanUserAddRows="False"
+    <StackPanel>
+        <TextBlock Padding="3" Text="Logs" TextAlignment="Center" FontWeight="Bold" Foreground="Blue" FontSize="20"></TextBlock>
+        <DataGrid Name="LogTable" ItemsSource="{Binding VM_ServiceLogs}" IsReadOnly="True" CanUserAddRows="False" Height="200"
                           CanUserDeleteRows="False" CanUserReorderColumns="False" CanUserResizeColumns="False" CanUserResizeRows="False"
-                          CanUserSortColumns="False" AutoGenerateColumns="False" IsHitTestVisible="False" Focusable="False" 
+                          CanUserSortColumns="False" AutoGenerateColumns="False" ScrollViewer.VerticalScrollBarVisibility="Visible" ScrollViewer.HorizontalScrollBarVisibility="Visible"
                           ScrollViewer.CanContentScroll="True" VerticalScrollBarVisibility="Visible" RowHeight="30" ColumnWidth="120">
-                    <DataGrid.Columns>
-                        <DataGridTextColumn Header="Type" Binding="{Binding Status}" Width="Auto" IsReadOnly="True">
-                            <DataGridTextColumn.ElementStyle>
-                                <Style TargetType="TextBlock">
-                                    <Setter Property="Background" Value="{Binding Status, Converter={StaticResource ResourceKey=ColorConverter}}" />
-                                </Style>
-                            </DataGridTextColumn.ElementStyle>
-                        </DataGridTextColumn>
-                        <DataGridTextColumn Header="Message" Binding="{Binding Message}" Width="*" IsReadOnly="True"/>
-                    </DataGrid.Columns>
-                </DataGrid>
-            </Border>
-        </StackPanel>
-    </Grid>
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Type" Binding="{Binding Status}" Width="Auto" IsReadOnly="True">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="TextBlock">
+                            <Setter Property="Background" Value="{Binding Status, Converter={StaticResource ResourceKey=ColorConverter}}" />
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="Message" Binding="{Binding Message}" Width="*" IsReadOnly="True"/>
+            </DataGrid.Columns>
+        </DataGrid>
+
+    </StackPanel>
 </UserControl>
