Logs & Service status, students and number of photos done. Config Half Way!

--- a/ImageWebService/Views/Shared/_Layout.cshtml
+++ b/ImageWebService/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
         <div class="container">
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Image Web", "ImageWeb", "Home")</li>
+                    <li>@Html.ActionLink("Image Web", "Index", "Home")</li>
                     <li>@Html.ActionLink("Config", "Config", "Home")</li>
                     <li>@Html.ActionLink("Photos", "Photos", "Home")</li>
                     <li>@Html.ActionLink("Logs", "Logs", "Home")</li>
