--- a/ImageWebService/Views/Home/Index.cshtml
+++ b/ImageWebService/Views/Home/Index.cshtml
@@ -1,7 +1,47 @@
-﻿
+﻿@model ImageWebService.Models.ImageWebModel
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Image Web Service";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Image Web Service</h2>
+
+<p>
+    Server Status:
+    @Model.Active
+    <br />
+    Server Photos:
+    @Model.NumberOfPhotos
+</p>
+
+
+<table class="table">
+    <tr>
+        <th>
+            ID
+        </th>
+        <th>
+            First Name
+        </th>
+        <th>
+            Last Name
+        </th>
+    </tr>
+
+    @foreach (var item in Model.Students)
+    {
+        <tr>
+            <td>
+                @item.ID
+            </td>
+            <td>
+                @item.FirstName
+            </td>
+            <td>
+                @item.LastName
+            </td>
+        </tr>
+    }
+</table>
+
 
