--- a/ImageWebService/Views/Home/Config.cshtml
+++ b/ImageWebService/Views/Home/Config.cshtml
@@ -1,28 +1,34 @@
-﻿@model ImageWebService.Models.Config
+﻿@model ImageWebService.Models.ConfigModel
 @{
     ViewBag.Title = "Config";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Config</h2>
+<h2>Service Config</h2>
 
 <p>
     Output Directory:
     @Model.OutputDir
-    <br />
+</p>
+<br />
+<p>
     Source Name:
     @Model.SourceName
-    <br />
+</p>
+<br />
+<p>
     Log Name:
     @Model.LogName
-    <br />
+</p>
+<br />
+<p>
     Thumbnail Size:
     @Model.ThumbnailSize
-    <br />
 </p>
+<br />
 
 @foreach (var item in Model.DirectoryHandlers)
 {
-    <a>@item</a>
+    <a href="@Url.Action("RemoveConfirm", "Home", new {handler = @item})">@item</a>
     <br />
 }
